--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,3 @@
-/* Importing Google Font */
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&display=swap');
 
 body {
@@ -39,7 +38,8 @@ button:hover {
 }
 
 .selected {
-  animation: pulse 1s;
+  animation: pulse 0.7s;
+  box-shadow: 0 0 5px rgba(98, 0, 234, 0.7);
 }
 
 @keyframes pulse {
@@ -53,6 +53,6 @@ button:hover {
   }
   100% {
     transform: scale(1);
-    box-shadow: 0 0 0 rgba(98, 0, 234, 0.7);
+    box-shadow: 0 0 5px rgba(98, 0, 234, 0.7);
   }
 }
